--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dfinity/agent": "^0.20.2",
     "@dfinity/candid": "^0.20.2",
     "@dfinity/principal": "^0.20.2",
+    "js-sha256": "^0.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
